--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Parth X Adul</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
         header { background-color: #333; color: white; text-align: center; padding: 1rem; }
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to Pakistan </h1>
     </header>
     <nav>
         <a href="#home">Home</a>
@@ -25,15 +25,15 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>This is a simple website. Replace this text with your content!</p>
+            <p>This is a simple website Pakistan is a vibrant South Asian nation, established in 1947 following the partition of British India, with a population of over 220 million people. Bordered by India, Afghanistan, Iran, and China, it features diverse landscapes from the rugged peaks of the Himalayas to the fertile Indus River Valley. </p>
         </section>
         <section id="about">
             <h2>About</h2>
-            <p>Tell visitors about yourself or your project here.</p>
+            <p>we sell our bombs here.</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: your.email@example.com</p>
+            <p>Email: Abduldeshmuk@gmail.com</p>
         </section>
     </main>
     <footer>
